# Voting_system

Project1/documentation/: Doxyfile
Project1/documentation/html/: Election_8h_source.html  annotated.html  ballot_8h_source.html  candidate_8h_source.html  classBallot-members.html  classBallot.html  classBallot__inherit__graph.map  classBallot__inherit__graph.md5  classCandidate-members.html  classCandidate.html  classElection-members.html  classElection.html  classPluralityBallot-members.html  classPluralityBallot.html  classPluralityBallot__coll__graph.map  classPluralityBallot__inherit__graph.md5  classSTVBallot-members.html  classSTVBallot.html  classSTVBallot__coll__graph.md5  classSTVBallot__inherit__graph.map  classUserInterface-members.html  classUserInterface.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherits.html  md_Readme.html  (+6 more)
Project1/documentation/latex/: Election_8h_source.tex  annotated.tex  ballot_8h_source.tex  candidate_8h_source.tex  classBallot.tex  classBallot__inherit__graph.md5  classCandidate.tex  classElection.tex  classPluralityBallot.tex  classPluralityBallot__inherit__graph.md5  classSTVBallot.tex  classSTVBallot__inherit__graph.md5  classUserInterface.tex  files.tex  hierarchy.tex  md_Readme.tex  pluralityballot_8h_source.tex  refman.tex  (+3 more)
Project1/src/: Ballot_UT.cc  CMakeLists.txt  Election.cpp  Election.h  Makefile  audit_plurality.txt  audit_stv.txt  ballot.cpp  ballot.h  candidate.cpp  candidate.h  main.cpp  plurality.cpp  plurality.h  pluralityballot.cpp  pluralityballot.h  stv.cpp  stv.h  stvballot.cpp  stvballot.h  test_src.cc  unit_tests.cpp  userinterface.cpp  userinterface.h
Project1/testing/: CMakeLists.txt  userinterface_UT.cpp
Project2/: README.md
Project2/documentation/: Doxyfile
Project2/src/: Ballot_UT.cc  CMakeLists.txt  Election.cpp  Election.h  Election_UT.cc  MVlogic.cpp  MVlogic.h  Makefile  ballot.cpp  ballot.h  candidate.cpp  candidate.h  candidate_UT.cc  election_app  main.cpp  mv_UT.cc  mvballot.cpp  mvballot.h  mvballot_UT.cc  plurality.cpp  plurality.h  plurality_UT.cc  pluralityballot.cpp  pluralityballot.h  pluralityballot_UT.cc  stv.cpp  stv.h  stv_UT.cc  stvballot.cpp  stvballot.h  stvballot_UT.cc  test_src.cc  userinterface.cpp  userinterface.h  userinterface_UT.cc
Project2/testing/: README.md  invalid_plurality_ballot.csv  invalid_stv_ballots.csv  mixed_plurality_ballots.csv  mixed_stv_ballots.csv  mv_all_invalid_ballots.csv  mv_all_valid_ballots.csv  mv_all_valid_ballots_10.csv  mv_all_valid_ballots_100.csv  mv_all_valid_ballots_200.csv  mv_all_valid_ballots_300.csv  mv_ballots_named_10000.csv  mv_ballots_tie.csv  mv_mixed_ballots.csv  mv_mixed_ballots_100.csv  mv_mixed_ballots_100_seat_1.csv  mv_mixed_ballots_2.csv  mv_mixed_ballots_200.csv  mv_mixed_ballots_200_seat_1.csv  mv_seats_more_than_candidates.csv  mv_single_candidate.csv  plurality_all_inputs.csv  plurality_all_inputs_100.csv  plurality_all_inputs_2.csv  plurality_all_inputs_200.csv  plurality_all_inputs_3.csv  plurality_all_inputs_300.csv  plurality_all_invalid_10.csv  plurality_all_invalid_5.csv  plurality_ballots_named_10000.csv  plurality_ballots_regular.csv  plurality_ballots_tie.csv  plurality_ballots_tie_2.csv  single_candidate_stv.csv  stv_all_inputs_invalid.csv  stv_all_inputs_mixed.csv  stv_all_inputs_mixed_2.csv  stv_all_inputs_regular.csv  stv_all_inputs_regular_2.csv  stv_all_inputs_regular_3.csv  (+10 more)
(+21 files in other folders)
